SERVER-55473 DBClientBase::_auth returns original status instead of AuthenticationFaile.